# product_aggregator

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
aggregator_project/: confitest.py  manage.py
aggregator_project/core/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
aggregator_project/product_app/: admin.py  apps.py  custom_exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
aggregator_project/product_app/management/commands/: get_token.py
aggregator_project/product_app/migrations/: 0001_initial.py
aggregator_project/product_app/services/: offer_services.py  product_services.py  token_services.py
aggregator_project/v1/: urls.py
aggregator_project/v1/product_app/: admin.py  apps.py  custom_exceptions.py  models.py  serializers.py  tasks.py  urls.py  views.py
aggregator_project/v1/product_app/management/commands/: get_token.py
aggregator_project/v1/product_app/migrations/: 0001_initial.py  0002_offersmicroservicetoken.py  0003_offer_external_ms_id.py  0004_alter_offer_product.py  0005_alter_offer_external_ms_id_alter_product_description_and_more.py
aggregator_project/v1/product_app/services/: offer_services.py  product_services.py  token_services.py
aggregator_project/v1/product_app/tests/: confitest.py  conftest.py  factories.py  test_offers_services.py  test_product_services.py  test_token_servises.py  test_views.py  test_views_offers.py  test_views_product.py
